# rust-packet

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  after-success.sh  test.pcap
.github/: dependabot.yml
.github/workflows/: main.yml  pull_request.yml  rust.yml
benches/: bench_ether.rs  benchmark.rs
ci/: after-success.sh  fuzzit.sh
examples/: building.rs  interface_read_write.rs  packet_read_write.rs  read_write.rs  replay_pcap.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ether_from_bytes.rs  fuzz_ipv4_from_bytes.rs  fuzz_ipv6_from_bytes.rs  fuzz_packet.rs  fuzz_tcp_from_bytes.rs
src/: lib.rs  prelude.rs
src/datalink/: error.rs  mod.rs  pcap.rs  pcapfile.rs  pnet.rs
src/layer/: error.rs  mod.rs  noms.rs
src/layer/ether/: ethertype.rs  macaddress.rs  mod.rs  parser.rs
src/layer/ip/: ipv4.rs  ipv6.rs  mod.rs  parser.rs  protocols.rs
src/layer/raw/: mod.rs
src/layer/tcp/: mod.rs  options.rs  parser.rs
src/layer/udp/: mod.rs
src/packet/: error.rs  mod.rs
src/packet/layer/: error.rs  mod.rs
src/packet/layer/ether/: ethertype.rs  macaddress.rs  mod.rs
src/packet/layer/ip/: ipv6.rs  mod.rs
src/packet/layer/tcp/: mod.rs  options.rs
tests/: test_alloc.rs  test_layers.rs
